--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "@tervis/tervisproductsizeandformtypemetadata",
+  "name": "@tervis/tervisproductmetadata",
   "version": "1.0.1",
-  "main": "TervisProductSizeAndFormTypeMetadata.js",
+  "main": "TervisProductMetadata.js",
   "type": "module",
   "repository": {
     "type": "git",
-    "url": "https://tervis.visualstudio.com/TervisCustomyzer/_git/TervisProductSizeAndFormTypeMetadata"
+    "url": "https://tervis.visualstudio.com/TervisCustomyzer/_git/TervisProductMetadata"
   },
   "dependencies": {
     "node-fetch": "^2.6.0"
